[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jetcite"
version = "0.4.0"
description = "American legal citation parser and linker"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.scripts]
jetcite = "jetcite.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jetcite"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99

[project.optional-dependencies]
clipboard = [
    "pyperclip>=1.8",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
