[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jetcite"
version = "1.6.0"
description = "American legal citation parser and linker"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx[socks]>=0.27",
    "markdownify>=0.14",
    "beautifulsoup4>=4.12",
]

[project.scripts]
jetcite = "jetcite.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jetcite"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99

[project.optional-dependencies]
clipboard = [
    "pyperclip>=1.8",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
